--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "predeploy": "npm run build",
 
-
+    "start":"npm run dev",
    
   "build": "vite build",
   "deploy": "gh-pages -d dist",
