--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5000/start",
   "homepage": "https://axkratos.github.io/btcpirate",
   "scripts": {
     "predeploy": "npm run build",
@@ -17,16 +17,20 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@lottiefiles/lottie-player": "^2.0.4",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
+    "lottie-react": "^2.4.0",
     "nginx": "^1.0.8",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
-    
-    "react-transition-group": "^4.4.5"
+    "react-lottie": "^1.2.4",
+    "react-router-dom": "^6.26.1",
+    "react-transition-group": "^4.4.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
